--- a/docs/style.css
+++ b/docs/style.css
@@ -112,7 +112,7 @@ section {
 }
 
 .projetos-academicos .projeto-1 {
-    background-color: #5d2b02;
+    background-color: #2a195d;
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
@@ -135,7 +135,7 @@ section {
 }
 
 .projetos-academicos .projeto-2 {
-    background-color: #4a7030;
+    background-color: #2a195d;
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
@@ -152,7 +152,63 @@ section {
 }
 
 .projetos-academicos .projeto-2 a {
-    color: #231f1c;
+    color: #57d293;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#redes{
+    background-color: #66bf00;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#redes h2{
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.redes-sociais h3 {
+    margin-top: 30px;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #2a195d;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+.redes-sociais .minhas-redes-sociais {
+    background-color: #2a195d;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.redes-sociais .minhas-redes-sociais h4 {
+    color: #ffffff;
+}
+
+.redes-sociais .minhas-redes-sociais p {
+    margin: 10px 0;
+    color: #ffffff;
+}
+
+.redes-sociais .minhas-redes-sociais img {
+    width: 50px;
+    height: 50px;
+    transition: transform 0.3s;
+}
+
+.imagens-contatos img:hover {
+    transform: scale(1.1);
+}
+
+.redes-sociais .minhas-redes-sociais a {
+    color: #57d293;
     text-decoration: none;
     font-weight: bold;
 }
