--- a/docs/style.css
+++ b/docs/style.css
@@ -11,7 +11,6 @@ body {
     color: #333;
 }
 
-/* Navbar fixa no topo */
 header {
     position: fixed;
     top: 0;
@@ -42,19 +41,15 @@ header {
     border-radius: 5px;
 }
 
-/* Adiciona espaçamento para o conteúdo abaixo da navbar fixa */
 main {
     margin-top: 60px;
-    /* Ajuste para que o conteúdo não fique embaixo da navbar */
     padding: 20px;
 }
 
-/* Estilo das seções */
 section {
     margin-bottom: 40px;
 }
 
-/* Estilo da seção Sobre */
 #sobre {
     background-color: #378e70;
     padding: 30px;
@@ -218,4 +213,87 @@ footer {
     color: white;
     padding: 20px;
     text-align: center;
+}
+
+@media (max-width: 768px) {
+    .sobre-mim {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sobre-mim img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .sobre-mim p {
+        max-width: 600px;
+    }
+
+    #sobre h2 {
+        text-align: center;
+    }
+
+    .projeto {
+        background-color: #2a195d;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .projeto h4 {
+        color: #ffffff;
+    }
+
+    .projeto p {
+        margin: 10px 0;
+    }
+
+    .projeto a {
+        color: #57d293;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    h3 {
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
+
+    .sobre-mim {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sobre-mim img {
+        width: 120px;
+        height: 120px;
+    }
+
+    #projetos-academicos {
+        margin-top: 20px;
+    }
+
+    footer {
+        background-color: #9e2424;
+        color: white;
+        padding: 20px;
+        text-align: center;
+    }
+
+    footer p {
+        margin-bottom: 10px;
+    }
+
+    footer a {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+    }
 }
