--- a/docs/style.css
+++ b/docs/style.css
@@ -165,6 +165,19 @@ section {
     font-weight: bold;
 }
 
+#passatempos {
+    background-color: #66bf00;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#passatempos h2 {
+    color: #ffffff;
+    font-weight: bold;
+}
+
 .redes-sociais h3 {
     margin-top: 30px;
     color: #ffffff;
