adicionando as apis d 4 e 5 semestre

--- a/docs/style.css
+++ b/docs/style.css
@@ -192,7 +192,7 @@ section {
 }
 
 #passatempos {
-    background-color: #378e70;
+    background-color: #66bf00;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
@@ -242,7 +242,7 @@ section {
 }
 
 .redes-sociais .minhas-redes-sociais a {
-    color: #57d293;
+    color: #66bf00;
     text-decoration: none;
     font-weight: bold;
 }
