adicionando alteracoes e as apis do 5 e 6 semestre

--- a/docs/style.css
+++ b/docs/style.css
@@ -153,7 +153,7 @@ section {
 }
 
 #redes {
-    background-color: #378e70;
+    background-color: #66bf00;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
